Refactor Hyprland keybinds configuration for improved organization and clarity. Added section headings for better navigation, updated keybindings for workspace management, and introduced new features for media controls and scrolling text alignment. Enhanced overall structure to facilitate easier modifications and readability.

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -1,8 +1,13 @@
-# Lines ending with `# [hidden]` won't be shown on cheatsheet
-# Lines starting with #! are section headings
+# =============================================================================
+# Hyprland Keybinds
+# - Lines ending with `# [hidden]` won't be shown on cheatsheet
+# - Lines starting with #! are section headings
+# =============================================================================
 
 #!
 ##! Shell
+
+### Overview & Launcher
 # These absolutely need to be on top, or they won't work consistently
 bindid = Super, Super_L, Toggle overview, global, quickshell:overviewToggleRelease # Toggle overview/launcher
 bindid = Super, Super_R, Toggle overview, global, quickshell:overviewToggleRelease # [hidden] Toggle overview/launcher
@@ -19,12 +24,16 @@ bind = Super, mouse:276, global, quickshell:overviewToggleReleaseInterrupt # [hi
 bind = Super, mouse:277, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
 bind = Super, mouse_up,  global, quickshell:overviewToggleReleaseInterrupt # [hidden]
 bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
+bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcome.qml # [hidden] Launch welcome app
 
+### Quick Actions (Clipboard / Emoji / Workspace HUD)
 bindit = ,Super_L, global, quickshell:workspaceNumber # [hidden]
 bindit = ,Super_R, global, quickshell:workspaceNumber # [hidden]
 bindd = Super, V, Clipboard history >> clipboard, global, quickshell:overviewClipboardToggle # Clipboard history >> clipboard
 bindd = Super, Period, Emoji >> clipboard, global, quickshell:overviewEmojiToggle # Emoji >> clipboard
-bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
+
+### Sidebars & Panels
 bind = Super, A, global, quickshell:sidebarLeftToggle # Toggle left sidebar
 bind = Super+Alt, A, global, quickshell:sidebarLeftToggleDetach # [hidden]
 bind = Super, B, global, quickshell:sidebarLeftToggle # [hidden]
@@ -32,65 +41,70 @@ bind = Super, O, global, quickshell:sidebarLeftToggle # [hidden]
 bindd = Super, N, Toggle right sidebar, global, quickshell:sidebarRightToggle # Toggle right sidebar
 bindd = Super, Slash, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
 bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
-bindd = Super, M, Toggle media controls, global, quickshell:mediaControlsToggle # Toggle media controls
 bind = Super, G, global, quickshell:overlayToggle # Toggle overlay
-bindd = Ctrl+Alt, Delete, Toggle session menu, global, quickshell:sessionToggle # Toggle session menu
 bindd = Super, J, Toggle bar, global, quickshell:barToggle # Toggle bar
+bindd = Ctrl+Alt, Delete, Toggle session menu, global, quickshell:sessionToggle # Toggle session menu
 bind = Ctrl+Alt, Delete, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill wlogout || wlogout -p layer-shell # [hidden] Session menu (fallback)
-bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcome.qml # [hidden] Launch welcome app
+bindd = Super, M, Toggle media controls, global, quickshell:mediaControlsToggle # Toggle media controls
 
+### Hardware Keys & Audio
 bindle=, XF86MonBrightnessUp, exec, qs -c $qsConfig ipc call brightness increment || brightnessctl s 5%+ # [hidden]
 bindle=, XF86MonBrightnessDown, exec, qs -c $qsConfig ipc call brightness decrement || brightnessctl s 5%- # [hidden]
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ -l 1.5 && ~/.config/hypr/hyprland/scripts/play_sound.sh audio-volume-change # [hidden]
 bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- && ~/.config/hypr/hyprland/scripts/play_sound.sh audio-volume-change # [hidden]
-
 bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
 bindld = Super+Shift,M, Toggle mute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
 bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
 bindl = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
 bindld = Super+Alt,M, Toggle mic, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
+
+### Wallpaper / Appearance / Panels
 bindd = Ctrl+Super, T, Toggle wallpaper selector, global, quickshell:wallpaperSelectorToggle # Wallpaper selector
 bindd = Ctrl+Super+Alt, T, Select random wallpaper, global, quickshell:wallpaperSelectorRandom # Random wallpaper
 bindd = Ctrl+Super, T, Change wallpaper, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/colors/switchwall.sh # [hidden] Change wallpaper (fallback)
-bind = Ctrl+Super, R, exec, killall ags agsv1 gjs ydotool qs quickshell; qs -c $qsConfig & # Restart widgets
 bind = Super+Alt, W, global, quickshell:panelFamilyCycle # Cycle panel family
+bind = Ctrl+Super, R, exec, killall ags agsv1 gjs ydotool qs quickshell; qs -c $qsConfig & # Restart widgets
 
 ##! Utilities
-# Screenshot, Record, OCR, Color picker, Clipboard history
+
+### Screenshots & Visual Capture
 bindd = Super, V, Copy clipboard history entry, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || cliphist list | fuzzel --match-mode fzf --dmenu | cliphist decode | wl-copy # [hidden] Clipboard history >> clipboard (fallback)
 bindd = Super, Period, Copy an emoji, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || ~/.config/hypr/hyprland/scripts/fuzzel-emoji.sh copy # [hidden] Emoji >> clipboard (fallback)
 bind = Super+Shift, S, global, quickshell:regionScreenshot # Screen snip
 bind = Super+Shift, S, exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || hyprshot --freeze --clipboard-only --mode region --silent # [hidden] Screen snip (fallback)
 bind = Super+Shift, A, global, quickshell:regionSearch # Google Lens
 bind = Super+Shift, A, exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || ~/.config/hypr/hyprland/scripts/snip_to_search.sh # [hidden] Google Lens (fallback)
-# OCR
-bind = Super+Shift, X, global, quickshell:regionOcr # Character recognition >> clipboard
-bind = Super+Shift, T, global, quickshell:regionOcr # [hidden]
-bind = Super+Shift, X,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
-bind = Super+Shift, T,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
-# Color picker
-bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
-# Fullscreen screenshot
 bindl = ,Print,exec,~/.config/hypr/hyprland/scripts/screenshot.sh --fullscreen --clipboard # Screenshot >> clipboard
 bindln = Ctrl,Print, exec, ~/.config/hypr/hyprland/scripts/screenshot.sh --fullscreen --both # Screenshot >> clipboard & file
 bind = Shift,Print, exec, ~/.config/hypr/hyprland/scripts/screenshot.sh --cursor --clipboard # Screenshot at cursor >> clipboard
 bind = Shift+Ctrl,Print, exec, ~/.config/hypr/hyprland/scripts/screenshot.sh --cursor --both # Screenshot at cursor >> clipboard & file
-# Recording stuff
+
+### OCR & Color Picker
+bind = Super+Shift, X, global, quickshell:regionOcr # Character recognition >> clipboard
+bind = Super+Shift, T, global, quickshell:regionOcr # [hidden]
+bind = Super+Shift, X,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
+bind = Super+Shift, T,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
+bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
+
+### Recording & Capture Automation
 bindl = Super+Shift, R, global, quickshell:regionRecord # Record region (no sound)
 bindl = Super+Shift, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
 bindl = Super+Alt, R, global, quickshell:regionRecord # [hidden] Record region (no sound)
 bindl = Super+Alt, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
 bindl = Ctrl+Alt, R, exec, ~/.config/quickshell/$qsConfig/scripts/videos/record.sh --fullscreen # [hidden] Record screen (no sound)
 bindl = Super+Shift+Alt, R, exec, ~/.config/quickshell/$qsConfig/scripts/videos/record.sh --fullscreen --sound # Record screen (with sound)
-# AI
+
+### AI Helpers
 bindd = Super+Shift+Alt, mouse:273, Generate AI summary for selected text, exec, ~/.config/hypr/hyprland/scripts/ai/primary-buffer-query.sh # [hidden] AI summary for selected text
 
 #!
 ##! Window
-# Focusing
+### Mouse Interactions
 bindm = Super, mouse:272, movewindow # Move
 bindm = Super, mouse:274, movewindow # [hidden]
 bindm = Super, mouse:273, resizewindow # Resize
+
+### Focus & Window Movement
 #/# bind = Super, ←/↑/→/↓,, # Focus in direction
 bind = Super, Left, movefocus, l # [hidden]
 bind = Super, Right, movefocus, r # [hidden]
@@ -107,18 +121,17 @@ bind = Alt, F4, killactive, # [hidden] Close (Windows)
 bind = Super, Q, killactive, # Close
 bind = Super+Shift+Alt, Q, exec, hyprctl kill # Forcefully zap a window
 
-
-# Window split ratio
+### Split Ratio / Modes / Pinning
 #/# binde = Super, ;/',, # Adjust split ratio
 binde = Super, Semicolon, splitratio, -0.1 # [hidden]
 binde = Super, Apostrophe, splitratio, +0.1 # [hidden]
-# Positioning mode
 bind = Super+Alt, Space, togglefloating, # Float/Tile
 bind = Super, D, fullscreen, 1 # Maximize
 bind = Super, F, fullscreen, 0 # Fullscreen
 bind = Super+Alt, F, fullscreenstate, 0 3 # Fullscreen spoof
 bind = Super, P, pin # Pin
 
+### Workspace Sends (Numeric)
 #/# bind = Super+Alt, Hash,, # Send to workspace # (1, 2, 3,...)
 # We use raw keycodes because some keyboard layouts register number keys as different chars. The codes can be verified with `wev`
 bind = Super+Alt, code:10, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 1 # [hidden]
@@ -143,26 +156,22 @@ bind = Super+Alt, code:80, exec, ~/.config/hypr/hyprland/scripts/workspace_actio
 bind = Super+Alt, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 9  # [hidden]
 bind = Super+Alt, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
-# #/# bind = Super+Shift, Scroll ↑/↓,, # Hyprscrolling horizontal
+### Workspace Sends (Scroll / Paging)
 bind = Super+Shift, mouse_down, layoutmsg, move -col # [hidden] Hyprscrolling scroll left
 bind = Super+Shift, mouse_up, layoutmsg, move +col # [hidden] Hyprscrolling scroll right
 bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
 bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
-
-#/# bind = Super+Shift, Page_↑/↓,, # Send to workspace left/right
 bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
 bind = Super+Alt, Page_Up, movetoworkspace, -1 # [hidden]
 bind = Super+Shift, Page_Down, movetoworkspace, r+1  # [hidden]
 bind = Super+Shift, Page_Up, movetoworkspace, r-1  # [hidden]
 bind = Ctrl+Super+Shift, Right, movetoworkspace, r+1 # [hidden]
 bind = Ctrl+Super+Shift, Left, movetoworkspace, r-1 # [hidden]
-
 bind = Super+Alt, S, movetoworkspacesilent, special # Send to scratchpad
-
 bind = Ctrl+Super, S, togglespecialworkspace, # [hidden]
 
 ##! Workspace
-# Switching
+### Switching (Number Row)
 #/# bind = Super, Hash,, # Focus workspace # (1, 2, 3,...)
 # We use raw keycodes because some keyboard layouts register number keys as different chars. The codes can be verified with `wev`
 bind = Super, code:10, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 1 # [hidden]
@@ -175,7 +184,8 @@ bind = Super, code:16, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh
 bind = Super, code:17, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 8 # [hidden]
 bind = Super, code:18, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 9 # [hidden]
 bind = Super, code:19, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 10 # [hidden]
-# keypad numbers
+
+### Switching (Keypad)
 bindp = Super, code:87, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 1  # [hidden]
 bindp = Super, code:88, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 2  # [hidden]
 bindp = Super, code:89, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 3  # [hidden]
@@ -187,26 +197,49 @@ bindp = Super, code:80, exec, ~/.config/hypr/hyprland/scripts/workspace_action.s
 bindp = Super, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 9  # [hidden]
 bindp = Super, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 10 # [hidden]
 
-# Expo overview
-bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
+##! Workspace 11-20 (for secondary monitor)
+# Switch to workspace 11-20 (using Ctrl modifier to avoid conflicts with Super+Shift)
+# We use raw keycodes because some keyboard layouts register number keys as different chars
+bind = Ctrl+Super, code:10, workspace, 11 # Switch to workspace 11
+bind = Ctrl+Super, code:11, workspace, 12 # Switch to workspace 12
+bind = Ctrl+Super, code:12, workspace, 13 # Switch to workspace 13
+bind = Ctrl+Super, code:13, workspace, 14 # Switch to workspace 14
+bind = Ctrl+Super, code:14, workspace, 15 # Switch to workspace 15
+bind = Ctrl+Super, code:15, workspace, 16 # Switch to workspace 16
+bind = Ctrl+Super, code:16, workspace, 17 # Switch to workspace 17
+bind = Ctrl+Super, code:17, workspace, 18 # Switch to workspace 18
+bind = Ctrl+Super, code:18, workspace, 19 # Switch to workspace 19
+bind = Ctrl+Super, code:19, workspace, 20 # Switch to workspace 20
+# Move window to workspace 11-20
+bind = Ctrl+Super+Alt, code:10, movetoworkspacesilent, 11 # Move window to workspace 11
+bind = Ctrl+Super+Alt, code:11, movetoworkspacesilent, 12 # Move window to workspace 12
+bind = Ctrl+Super+Alt, code:12, movetoworkspacesilent, 13 # Move window to workspace 13
+bind = Ctrl+Super+Alt, code:13, movetoworkspacesilent, 14 # Move window to workspace 14
+bind = Ctrl+Super+Alt, code:14, movetoworkspacesilent, 15 # Move window to workspace 15
+bind = Ctrl+Super+Alt, code:15, movetoworkspacesilent, 16 # Move window to workspace 16
+bind = Ctrl+Super+Alt, code:16, movetoworkspacesilent, 17 # Move window to workspace 17
+bind = Ctrl+Super+Alt, code:17, movetoworkspacesilent, 18 # Move window to workspace 18
+bind = Ctrl+Super+Alt, code:18, movetoworkspacesilent, 19 # Move window to workspace 19
+bind = Ctrl+Super+Alt, code:19, movetoworkspacesilent, 20 # Move window to workspace 20
 
-#/# bind = Ctrl+Super, ←/→,, # Focus left/right
+### Overview & Paging
+bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
 bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
-#/# bind = Ctrl+Super+Alt, ←/→,, # [hidden] Focus busy left/right
 bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
 bind = Ctrl+Super+Alt, Left, workspace, m-1 # [hidden]
-#/# bind = Super, Page_↑/↓,, # Focus left/right
 bind = Super, Page_Down, workspace, +1 # [hidden]
 bind = Super, Page_Up, workspace, -1 # [hidden]
 bind = Ctrl+Super, Page_Down, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Page_Up, workspace, r-1 # [hidden]
-#/# bind = Super, Scroll ↑/↓,, # Focus workspace vertical
+
+### Scroll & Mouse Based Switching
 bind = Super, mouse_up, workspace, +1 # [hidden] Workspace up (vertical)
 bind = Super, mouse_down, workspace, -1 # [hidden] Workspace down (vertical)
 bind = Ctrl+Super, mouse_up, workspace, r+1 # [hidden]
 bind = Ctrl+Super, mouse_down, workspace, r-1 # [hidden]
-## Special
+
+### Special / Scratchpad
 bind = Super, S, togglespecialworkspace, # Toggle scratchpad
 bind = Super, mouse:275, togglespecialworkspace, # [hidden]
 bind = Ctrl+Super, BracketLeft, workspace, -1 # [hidden]
@@ -294,29 +327,16 @@ bind = Super+Alt, Y, layoutmsg, colresize -0.1 # Resize column smaller
 bind = Super+Alt, U, layoutmsg, colresize +0.1 # Resize column larger
 bind = Super+Alt, P, layoutmsg, promote # Promote window to new column
 bind = Super+Alt, I, layoutmsg, togglefit # Toggle fit method
-
-##! Workspace 11-20 (for secondary monitor)
-# Switch to workspace 11-20 (using Ctrl modifier to avoid conflicts with Super+Shift)
-# We use raw keycodes because some keyboard layouts register number keys as different chars
-bind = Ctrl+Super, code:10, workspace, 11 # Switch to workspace 11
-bind = Ctrl+Super, code:11, workspace, 12 # Switch to workspace 12
-bind = Ctrl+Super, code:12, workspace, 13 # Switch to workspace 13
-bind = Ctrl+Super, code:13, workspace, 14 # Switch to workspace 14
-bind = Ctrl+Super, code:14, workspace, 15 # Switch to workspace 15
-bind = Ctrl+Super, code:15, workspace, 16 # Switch to workspace 16
-bind = Ctrl+Super, code:16, workspace, 17 # Switch to workspace 17
-bind = Ctrl+Super, code:17, workspace, 18 # Switch to workspace 18
-bind = Ctrl+Super, code:18, workspace, 19 # Switch to workspace 19
-bind = Ctrl+Super, code:19, workspace, 20 # Switch to workspace 20
-# Move window to workspace 11-20
-bind = Ctrl+Super+Alt, code:10, movetoworkspacesilent, 11 # Move window to workspace 11
-bind = Ctrl+Super+Alt, code:11, movetoworkspacesilent, 12 # Move window to workspace 12
-bind = Ctrl+Super+Alt, code:12, movetoworkspacesilent, 13 # Move window to workspace 13
-bind = Ctrl+Super+Alt, code:13, movetoworkspacesilent, 14 # Move window to workspace 14
-bind = Ctrl+Super+Alt, code:14, movetoworkspacesilent, 15 # Move window to workspace 15
-bind = Ctrl+Super+Alt, code:15, movetoworkspacesilent, 16 # Move window to workspace 16
-bind = Ctrl+Super+Alt, code:16, movetoworkspacesilent, 17 # Move window to workspace 17
-bind = Ctrl+Super+Alt, code:17, movetoworkspacesilent, 18 # Move window to workspace 18
-bind = Ctrl+Super+Alt, code:18, movetoworkspacesilent, 19 # Move window to workspace 19
-bind = Ctrl+Super+Alt, code:19, movetoworkspacesilent, 20 # Move window to workspace 20
+# Fit helpers
+bind = Super+Ctrl, F, layoutmsg, fit active # Fit focused column
+bind = Super+Ctrl, G, layoutmsg, fit visible # Fit visible columns
+bind = Super+Ctrl+Shift, F, layoutmsg, fit all # Fit all columns
+# Focus helpers (wrap inside layout)
+bind = Super+Ctrl, H, layoutmsg, focus l # Focus column left
+bind = Super+Ctrl, L, layoutmsg, focus r # Focus column right
+bind = Super+Ctrl, K, layoutmsg, focus u # Focus row up
+bind = Super+Ctrl, J, layoutmsg, focus d # Focus row down
+# Swap entire columns
+bind = Super+Ctrl+Shift, H, layoutmsg, swapcol l # Swap current column left
+bind = Super+Ctrl+Shift, L, layoutmsg, swapcol r # Swap current column right
 
