--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -306,14 +306,14 @@ bind = Ctrl+Shift, Escape, exec, ~/.config/hypr/hyprland/scripts/launch_first_av
 bind = Ctrl+Super, Backslash, resizeactive, exact 640 480 # [hidden]
 
 #! User
-##! Custom / Hyprscrolling / extra workspaces (merged from custom/keybinds.conf)
+##! Custom
 
 # Open shell config
 bind = Ctrl+Super, Slash, exec, xdg-open ~/.config/illogical-impulse/config.json # Edit shell config
 # Open Hyprland keybinds
 bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/hyprland/keybinds.conf # Edit keybinds
 
-##! Hyprscrolling Layout
+##! Hyprscrolling
 # Move layout horizontally (using Y/U to avoid conflicts with Period/Comma)
 bind = Super, Y, layoutmsg, move -col # Move layout left
 bind = Super, U, layoutmsg, move +col # Move layout right
