--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -11,7 +11,7 @@ EnumerateSkipFirst=False
 ModifierOnlyKeyTimeout=250
 
 [Hotkey/TriggerKeys]
-0=Control+space
+0=Alt+space
 1=Zenkaku_Hankaku
 2=Hangul
 
