--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -1,5 +1,6 @@
 # MONITOR CONFIG
-# HDMI on the left, eDP-1 on the right
+# HDMI on the left, eDP-1 on the right - 2880x1800
+
 monitor = eDP-1, 1920x1200@120, 1920x0, 1, bitdepth, 10, vrr, 2
 monitor = HDMI-A-1, 1920x1080@75, 0x0, 1, bitdepth, 10, vrr, 2
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
