Fix 4-finger gesture commands in Hyprland configuration for correct column movement. Swapped the actions for left and right gestures to ensure proper layout management during hyprscrolling.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -12,8 +12,8 @@ gesture = 3, swipe, move,
 gesture = 3, pinch, float
 
 # 4-finger horizontal: Hyprscrolling layout (move columns)
-gesture = 4, left, dispatcher, layoutmsg, move -col
-gesture = 4, right, dispatcher, layoutmsg, move +col
+gesture = 4, left, dispatcher, layoutmsg, move +col
+gesture = 4, right, dispatcher, layoutmsg, move -col
 
 # 4-finger vertical: workspaces
 gesture = 4, vertical, workspace
