Update color configurations and enhance Quickshell address normalization
- Updated color settings in fuzzel_theme.ini, gtk.css, and colors.conf for a consistent dark theme across the interface.
- Improved address normalization in OverviewWidget.qml to ensure proper formatting of addresses.
- Adjusted background and text colors in hyprlock and general configurations for better visual coherence.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -26,9 +26,60 @@ gestures {
     workspace_swipe_create_new = true
 }
 
+# --- VISUAL APPEARANCE --- #
+### --- NEON FUTURISTIC COLORSETS --- ###
+
+# NF‑1 : Cyber Teal Pulse
+# col.active_border   = rgba(0a0f12ee) rgba(00ffbbee) rgba(00ffbbee) rgba(0a0f12ee) 60deg
+# col.inactive_border = rgba(0a0f1288) rgba(00ffbb55) rgba(00ffbb55) rgba(0a0f1288) 60deg
+
+# NF‑2 : Neon Abyss
+# col.active_border   = rgba(05080cee) rgba(00ffbbee) rgba(008888ee) rgba(05080cee) 45deg
+# col.inactive_border = rgba(05080c88) rgba(00ffbb44) rgba(00888844) rgba(05080c88) 45deg
+
+# NF‑3 : Matrix Flux
+# col.active_border   = rgba(001414ee) rgba(00ffbbee) rgba(00d9a0ee) rgba(001414ee) 135deg
+# col.inactive_border = rgba(00141488) rgba(00ffbb44) rgba(00d9a044) rgba(00141488) 135deg
+
+# NF‑4 : Aether Wave
+# col.active_border   = rgba(0e0018ee) rgba(00ffbbee) rgba(5500ffee) rgba(0e0018ee) 45deg
+# col.inactive_border = rgba(0e001888) rgba(00ffbb44) rgba(5500ff44) rgba(0e001888) 45deg
+
+# NF‑5 : Quantum Lime
+# col.active_border   = rgba(001510ee) rgba(00ffbbee) rgba(39ff66ee) rgba(001510ee) 30deg
+# col.inactive_border = rgba(00151088) rgba(00ffbb44) rgba(39ff6644) rgba(00151088) 30deg
+
+# NF‑6 : Sunset Drive (teal → hồng san hô)
+# col.active_border   = rgba(120014ee) rgba(00ffbbee) rgba(ff5566ee) rgba(120014ee) 40deg
+# col.inactive_border = rgba(12001488) rgba(00ffbb44) rgba(ff556644) rgba(12001488) 40deg
+
+# NF‑7 : Hyper Citrus (teal → vàng chanh)
+# col.active_border   = rgba(0a1300ee) rgba(00ffbbee) rgba(faff00ee) rgba(0a1300ee) 25deg
+# col.inactive_border = rgba(0a130088) rgba(00ffbb44) rgba(faff0044) rgba(0a130088) 25deg
+
+# NF‑8 : Magenta Pulse (teal → tím hồng)
+# col.active_border   = rgba(050012ee) rgba(00ffbbee) rgba(d900ffee) rgba(050012ee) 60deg
+# col.inactive_border = rgba(05001288) rgba(00ffbb44) rgba(d900ff44) rgba(05001288) 60deg
+
+# NF‑9 : Azure Circuit (teal → xanh dương điện)
+# col.active_border   = rgba(001018ee) rgba(00ffbbee) rgba(0090ffee) rgba(001018ee) 135deg
+# col.inactive_border = rgba(00101888) rgba(00ffbb44) rgba(0090ff44) rgba(00101888) 135deg
+
+# NF‑10 : Lava Mint (teal → cam‑đỏ)
+# col.active_border   = rgba(180700ee) rgba(00ffbbee) rgba(ff5500ee) rgba(180700ee) 50deg
+# col.inactive_border = rgba(18070088) rgba(00ffbb44) rgba(ff550044) rgba(18070088) 50deg
+
+# NF-11 : Cyber Neon
+# col.active_border = rgba(000000ee) rgba(00ffbbdd) rgba(ff00ffdd) rgba(000000ee) 45deg
+# col.inactive_border = rgba(000000cc) rgba(00ffbb55) rgba(ff00ff55) rgba(000000cc) 45deg
 
 general {
     layout = scrolling
+
+    # NF-11 : Cyber Neon
+    col.active_border   = rgba(120014ee) rgba(00ffbbee) rgba(ff5566ee) rgba(120014ee) 40deg
+    col.inactive_border = rgba(12001488) rgba(00ffbb44) rgba(ff556644) rgba(12001488) 40deg
+
     # Gaps and border
     gaps_in = 4
     gaps_out = 4
