--- a/config/matugen/templates/hyprland/colors.conf
+++ b/config/matugen/templates/hyprland/colors.conf
@@ -1,7 +1,7 @@
-general {
-    col.active_border = rgba({{colors.outline.default.hex_stripped}}AA)
-    col.inactive_border = rgba({{colors.outline_variant.default.hex_stripped}}AA)
-}
+# general {
+#     col.active_border = rgba({{colors.outline.default.hex_stripped}}AA)
+#     col.inactive_border = rgba({{colors.outline_variant.default.hex_stripped}}AA)
+# }
 
 misc {
     background_color = rgba({{colors.surface.dark.hex_stripped}}FF)
