Comment out keybinds for horizontal layout movement in Hyprland configuration to prevent conflicts with existing bindings.

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -315,8 +315,8 @@ bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/hyprland/keybinds.co
 
 ##! Hyprscrolling
 # Move layout horizontally (using Y/U to avoid conflicts with Period/Comma)
-bind = Super, Y, layoutmsg, move -col # Move layout left
-bind = Super, U, layoutmsg, move +col # Move layout right
+# bind = Super, Y, layoutmsg, move -col # Move layout left
+# bind = Super, U, layoutmsg, move +col # Move layout right
 # Move window to column
 bind = Super+Shift, Y, layoutmsg, movewindowto l # Move window left
 bind = Super+Shift, U, layoutmsg, movewindowto r # Move window right
