--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -30,7 +30,8 @@
 #
 # theme = Darkermatrix
 # theme = Darkmatrix
-theme = Matrix
+# theme = Matrix
+config-file = colors
 
 # # Spacing around the equals sign does not matter.
 # # All of these are identical:
