Update color configurations and cursor settings across various files
- Swapped color values in Ghostty and Matugen color palettes for better visual consistency.
- Added cursor theme settings in GTK configuration files.
- Updated cursor settings in Hyprland configuration to use the new Bibata-Modern-Ice theme.
- Enhanced CliphistImage.qml to handle image source paths more robustly.
- Refined OverviewWidget.qml for improved workspace handling and visual clarity.

--- a/config/hypr/hyprland/env.conf
+++ b/config/hypr/hyprland/env.conf
@@ -61,3 +61,7 @@ env = ILLOGICAL_IMPULSE_VIRTUAL_ENV, ~/.local/state/quickshell/.venv
 
 # ######## Terminal application #########
 env = TERMINAL, ghostty
+
+# Cursor
+env = XCURSOR_THEME, Bibata-Modern-Ice
+env = XCURSOR_SIZE, 24
