--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -2,4 +2,5 @@
 gtk-icon-theme-name=Fluent-dark
 gtk-theme-name=Orchis-Teal-Dark
 gtk-font-name=Noto Sans 11
+gtk-cursor-theme-name=Bibata-Modern-Ice
 
