Add layout configurations for Dwindle and Master layouts in Hyprland

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,6 +12,8 @@ source=hyprland/general.conf
 source=hyprland/rules.conf
 source=hyprland/colors.conf
 source=hyprland/keybinds.conf
+source=hyprland/layouts/master-layout.conf
+source=hyprland/layouts/dwindle-layout.conf
 
 # Custom (merged into hyprland/*.conf; keep commented as a reference)
 # source=custom/env.conf
