--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -75,6 +75,8 @@ gestures {
 
 general {
     layout = scrolling
+    # layout = dwindle
+    # layout = master
 
     # NF-11 : Cyber Neon
     col.active_border   = rgba(120014ee) rgba(00ffbbee) rgba(ff5566ee) rgba(120014ee) 40deg
