Add comment header for layout section in hyprland configuration

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,6 +12,8 @@ source=hyprland/general.conf
 source=hyprland/rules.conf
 source=hyprland/colors.conf
 source=hyprland/keybinds.conf
+
+# Layouts
 source=hyprland/layouts/master-layout.conf
 source=hyprland/layouts/dwindle-layout.conf
 
