Enhance Hyprland configuration with new features and adjustments
- Added a command to reload Hyprland settings on startup.
- Introduced new color sets inspired by Matrix aesthetics for a disruptive theme.
- Adjusted layout settings to use 'dwindle' and refined border properties for better visual appeal.
- Updated blur and shadow settings for improved performance and aesthetics.
- Modified keybinds for file manager to prioritize 'nautilus' over other options.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -73,21 +73,65 @@ gestures {
 # col.active_border = rgba(000000ee) rgba(00ffbbdd) rgba(ff00ffdd) rgba(000000ee) 45deg
 # col.inactive_border = rgba(000000cc) rgba(00ffbb55) rgba(ff00ff55) rgba(000000cc) 45deg
 
+# --- FUCK THE MATRIX COLORSETS --- #
+# Theme intent: disruptive, glitchy, anti‑system riffs on classic Matrix neon.
+# Prefix FM‑x (Fuck Matrix) keeps parity with NF sets; all inactive borders use reduced alpha / warmer or desaturated glitch echoes.
+
+# FM‑1 : Glitch Rain Fracture (terminal green → toxic cyan)
+# col.active_border   = rgba(001610ee) rgba(00ff55ee) rgba(00ffddee) rgba(001610ee) 95deg
+# col.inactive_border = rgba(00161088) rgba(00ff5544) rgba(00ffdd44) rgba(00161088) 95deg
+
+# FM‑2 : Kernel Panic Flux (matrix green → anomaly magenta)
+# col.active_border   = rgba(001910ee) rgba(00ff55ee) rgba(ff00ffee) rgba(001910ee) 60deg
+# col.inactive_border = rgba(00191088) rgba(00ff5544) rgba(ff00ff44) rgba(00191088) 60deg
+
+# FM‑3 : Data Leak Pulse (phosphor green → breach red)
+# col.active_border   = rgba(021a10ee) rgba(00ff66ee) rgba(ff0033ee) rgba(021a10ee) 40deg
+# col.inactive_border = rgba(021a1088) rgba(00ff6644) rgba(ff003344) rgba(021a1088) 40deg
+
+# FM‑4 : Console Desync (emerald → warning amber → error magenta)
+# col.active_border   = rgba(031b10ee) rgba(00ff88ee) rgba(faff00ee) rgba(ff00ffee) 120deg
+# col.inactive_border = rgba(031b1088) rgba(00ff8844) rgba(faff0044) rgba(ff00ff44) 120deg
+
+# FM‑5 : Cipher Collapse (deep teal → ghost white → fracture cyan)
+# col.active_border   = rgba(041e21ee) rgba(00ffbbee) rgba(e0fffcee) rgba(041e21ee) 150deg
+# col.inactive_border = rgba(041e2188) rgba(00ffbb44) rgba(e0fffc44) rgba(041e2188) 150deg
+
+# FM‑6 : Neon Override (matrix green → override violet)
+# col.active_border   = rgba(001a12ee) rgba(00ff66ee) rgba(9f30ffee) rgba(001a12ee) 30deg
+# col.inactive_border = rgba(001a1288) rgba(00ff6644) rgba(9f30ff44) rgba(001a1288) 30deg
+
+# FM‑7 : Packet Storm (electric cyan → hazard yellow)
+# col.active_border   = rgba(00141aee) rgba(00ffddee) rgba(faff00ee) rgba(00141aee) 75deg
+# col.inactive_border = rgba(00141a88) rgba(00ffdd44) rgba(faff0044) rgba(00141a88) 75deg
+
+# FM‑8 : Root Breach (terminal green → breach orange → alarm red)
+# col.active_border   = rgba(051a00ee) rgba(00ff55ee) rgba(ff8800ee) rgba(ff2222ee) 95deg
+# col.inactive_border = rgba(051a0088) rgba(00ff5544) rgba(ff880044) rgba(ff222244) 95deg
+
+# FM‑9 : Memory Segfault (acid green → static gray → core red)
+# col.active_border   = rgba(001b12ee) rgba(00ff66ee) rgba(444444ee) rgba(ff2222ee) 110deg
+# col.inactive_border = rgba(001b1288) rgba(00ff6644) rgba(44444444) rgba(ff222244) 110deg
+
+# FM‑10 : Reality Overwrite (cyber teal → glitch magenta → warning lime)
+# col.active_border   = rgba(001a18ee) rgba(00ffccee) rgba(ff33ffee) rgba(39ff66ee) 85deg
+# col.inactive_border = rgba(001a1888) rgba(00ffcc44) rgba(ff33ff44) rgba(39ff6644) 85deg
+
 general {
-    layout = scrolling
-    # layout = dwindle
+    # layout = scrolling
+    layout = dwindle
     # layout = master
 
-    # NF-11 : Cyber Neon
-    col.active_border   = rgba(120014ee) rgba(00ffbbee) rgba(ff5566ee) rgba(120014ee) 40deg
-    col.inactive_border = rgba(12001488) rgba(00ffbb44) rgba(ff556644) rgba(12001488) 40deg
+    # FM‑5 : Cipher Collapse (deep teal → ghost white → fracture cyan)
+    col.active_border   = rgba(041e21ee) rgba(00ffbbee) rgba(e0fffcee) rgba(041e21ee) 150deg
+    col.inactive_border = rgba(041e2188) rgba(00ffbb44) rgba(e0fffc44) rgba(041e2188) 150deg
 
     # Gaps and border
-    gaps_in = 4
-    gaps_out = 4
+    gaps_in = 3
+    gaps_out = 3
     gaps_workspaces = 50
 
-    border_size = 3
+    border_size = 2
     resize_on_border = true
 
     no_focus_fallback = true
@@ -110,26 +154,26 @@ dwindle {
 }
 
 decoration {
-    rounding = 18
+    rounding = 15
 
     blur {
         enabled = true
-        xray = true
+        xray = false
         special = false
         new_optimizations = true
-        size = 14
-        passes = 3
+        size = 6
+        passes = 1
         brightness = 1
-        noise = 0.04
+        noise = 0
         contrast = 1
         popups = false
         popups_ignorealpha = 0.6
-        input_methods = true
+        input_methods = false
         input_methods_ignorealpha = 0.8
     }
 
     shadow {
-        enabled = true
+        enabled = false
         ignore_window = true
         range = 30
         offset = 0 2
@@ -162,17 +206,17 @@ animations {
     bezier = neonPulse, 0.15, 0.85, 0.1, 1.0
 
     # Border animations
-    animation = border, 1, 3, neonPulse
-    animation = borderangle, 1, 40, neonPulse, loop
+    animation = border, 1, 1, neonPulse
+    animation = borderangle, 1, 30, neonPulse, loop
     
     # Window animations
     # animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
     # animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
     # animation = windowsMove, 1, 3, emphasizedDecel, slide
     # animation = border, 1, 10, emphasizedDecel
-    animation = windowsIn, 1, 4, easeOutQuart, slide
+    animation = windowsIn, 1, 3, easeOutQuart, slide
     animation = windowsOut, 1, 3, easeOutQuart, slide
-    animation = windowsMove, 1, 4, easeInOutSine
+    animation = windowsMove, 1, 3, easeInOutSine
 
     # Layer animations
     # animation = layersIn, 1, 2.7, emphasizedDecel, popin 93%
@@ -193,7 +237,7 @@ animations {
 
     
     # Workspace animations
-    animation = workspaces, 1, 4, easeOutQuart, slidefadevert 70%
+    animation = workspaces, 1, 3, easeOutQuart, slidefadevert 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
     animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
