--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -223,7 +223,7 @@ bind = Ctrl+Super+Alt, code:18, movetoworkspacesilent, 19 # Move window to works
 bind = Ctrl+Super+Alt, code:19, movetoworkspacesilent, 20 # Move window to workspace 20
 
 ### Overview & Paging
-bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
+# bindd = Super+Shift, E, Toggle expo, hyprexpo:expo, toggle # Toggle expo
 bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
 bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
 bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
@@ -292,7 +292,7 @@ bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "ghostty" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
 bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh  "${TERMINAL}" "ghostty" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (alt)
 bind = Ctrl+Alt, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "ghostty" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (for Ubuntu people)
-bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
+bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "nautilus" "dolphin" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
 bind = Super, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "microsoft-edge-stable" "zen-browser" "firefox" "brave" "opera" "librewolf" "google-chrome-stable" "chromium" # Browser
 bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "code" "codium" "cursor" "zed" "zedit" "zeditor" "kate" "gnome-text-editor" "emacs" "command -v nvim && kitty -1 nvim" "command -v micro && kitty -1 micro" # Code editor
 bind = Ctrl+Super+Shift+Alt, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "wps" "onlyoffice-desktopeditors" "libreoffice" # Office software
