Improve symlink management in link-dotfiles script
- Enhanced symlink creation process to verify existing symlinks and handle incorrect links.
- Added backup functionality for existing files and directories before creating new symlinks.
- Implemented verification of the symlink after creation to ensure it points to the correct target.
- Improved user feedback with detailed messages for various scenarios during symlink management.

--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -11,7 +11,7 @@ EnumerateSkipFirst=False
 ModifierOnlyKeyTimeout=250
 
 [Hotkey/TriggerKeys]
-0=Alt+space
+0=Super+space
 1=Zenkaku_Hankaku
 2=Hangul
 
