Add 'fastfetch' to the list of linked items in link-dotfiles script and update monitor configurations in Hyprland settings

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -237,7 +237,7 @@ animations {
 
     
     # Workspace animations
-    animation = workspaces, 1, 3, easeOutQuart, slidefadevert 70%
+    animation = workspaces, 1, 3, easeOutQuart, slidefade 70%
     # animation = specialWorkspace, 1, 4, easeOutQuart, slidefade 70%
     # animation = workspaces, 1, 7, menu_decel, slidevert
     animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
